samples/_failures_safe/1761266153_0ff7ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b149191c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b149191c.c:164:5: error: expected expression at end of input
  164 |     if (
      |     ^~
./samples/SAFE/__tmp_b149191c.c:164:5: error: expected declaration or statement at end of input
